--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,12 @@ jobs:
     # Runs a single command using the runners shell
     - name: Super-Linter
       uses: github/super-linter@v2.1.0
+    
+    ################################
+    # Run Linter against code base #
+    ################################
+    - name: Lint Code Base
+      uses: docker://github/super-linter:v2.1.0
+      env:
+        VALIDATE_ALL_CODEBASE: false
+        VALIDATE_ANSIBLE: false
