Changing eslinter settigns

--- a/.github/linters/.eslintrc.yml
+++ b/.github/linters/.eslintrc.yml
@@ -39,5 +39,5 @@ plugins:
 # Rules #
 #########
 rules: {
-  exclude: /static/fontawesome/
+  ignore: ['./static/fontawesome/**/*.js', './static/fontawesome/**/*.css']
 }
